--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #f2f6f5;
+  background-color: #fff;
   color: #33313b;
 }
 
@@ -19,13 +19,14 @@ h2 {
 
 h3 {
   font-family: 'Lato', sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
 }
 
 .intro-header {
   color: #50b6bb;
-  font-size: 40px;
+  font-size: 20px;
+  letter-spacing: 3px;
 }
 
 h5 {
@@ -34,16 +35,24 @@ h5 {
   font-size: 1rem;
 }
 
+
+
 .card-title {
   font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 3px;
 }
 
 p {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: 14px;
-  color: #8f8f8f;
+  font-size: 13px;
+  letter-spacing: .3px;
+  line-height: 1.6rem;
+  color: #000;
 }
+
 
 hr {
   border-style: none;
@@ -55,15 +64,16 @@ hr {
 }
 
 /* Navigation Bar */
+
 .navbar {
   padding: 10px 20px 10px 30px;
 }
 
 .navbar-brand {
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 2.3rem;
-  font-weight: bold;
-  margin-left: 16px;
+  font-family: 'Reem Kufi', sans-serif;
+  font-weight: 400;
+  font-size: 35px;
+  letter-spacing: 0.3px;
 }
 
 .go {
@@ -72,17 +82,19 @@ hr {
 
 .nav-item {
   font-family: 'Montserrat', sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.83rem;
   font-weight: 700;
+  letter-spacing: .6px;
   padding-left: 20px;
   padding-right: 20px;
 }
+
 
 .nav-link {
   position: relative;
 }
 
-.nav-link:after {
+/* .nav-link:after {
   content: '';
   position: absolute;
   width: 0;
@@ -99,7 +111,7 @@ hr {
   width: 100%;
   left: 0;
   background: #ff6768;
-}
+} */
 
 /* Images */
 .top-img {
@@ -130,7 +142,7 @@ hr {
 /* Page intro */
 .intro {
   padding-top: 40px;
-  text-align: left;
+  text-align: center;
 }
 
 /* Cards */
@@ -141,6 +153,13 @@ hr {
 .card {
   margin-top: 40px;
   height: 530px;
+  border: none;
+  padding: 7%;
+}
+
+.card-body {
+  text-align: left;
+  padding: 20px 0 20px;
 }
 
 /* Footer */
