--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,14 @@ h2 {
 
 h3 {
   font-family: 'Lato', sans-serif;
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 700;
+  letter-spacing: 3px;
 }
 
 .intro-header {
   color: #50b6bb;
   font-size: 20px;
-  letter-spacing: 3px;
 }
 
 h5 {
@@ -71,7 +71,7 @@ hr {
 
 .navbar-brand {
   font-family: 'Reem Kufi', sans-serif;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 35px;
   letter-spacing: 0.3px;
 }
@@ -90,28 +90,7 @@ hr {
 }
 
 
-.nav-link {
-  position: relative;
-}
 
-/* .nav-link:after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 3px;
-  display: block;
-  margin-top: 5px;
-  right: 0;
-  background: #ff6768;
-  transition: width .2s ease;
-  -webkit-transition: width .2s ease;
-}
-
-.nav-link:hover:after {
-  width: 100%;
-  left: 0;
-  background: #ff6768;
-} */
 
 /* Images */
 .top-img {
@@ -127,11 +106,11 @@ hr {
 }
 
 .welcome-paragraph {
-  color: #8f8f8f;
-  font-size: 17px;
+
   width: 70%;
   margin: auto;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .belfast-logo {
@@ -147,7 +126,7 @@ hr {
 
 /* Cards */
 #content {
-  padding: 4%;
+  padding: 4% 4% 12%;
 }
 
 .card {
